fix(details): fix comment submit buttons not showing and then overcrowding

--- a/static/styles.css
+++ b/static/styles.css
@@ -738,6 +738,61 @@ nav {
     display: none;
 }
 
+@media screen and (max-width: 1100px) {
+    .comment-submit-button {
+        width: 20%;
+        margin-left: 0.40rem;
+        border-radius: 10px;
+        white-space: normal;
+
+    }
+
+    .comment-submit-form input {
+        width: 55%;
+    }
+
+
+}
+
+@media screen and (max-width: 960px) {
+    .comment-submit-button {
+        width: 22%;
+        margin-left: 0.35rem;
+        font-size: 0.80rem;
+    }
+
+    .comment-submit-form input {
+        width: 45%;
+    }
+
+}
+
+@media screen and (max-width: 660px) {
+    .comment-submit-button {
+        width: 25%;
+        margin-left: 0.20rem;
+        font-size: 0.60rem;
+    }
+
+    .comment-submit-form input {
+        width: 38%;
+    }
+
+}
+
+@media screen and (max-width: 480px) {
+    .comment-submit-button {
+        width: 30%;
+        margin-left: 0.15rem;
+        font-size: 0.65rem;
+    }
+
+    .comment-submit-form input {
+        width: 30%;
+    }
+
+}
+
 .cancel {
     background-color: white;
 }
